--- a/demo/index.html
+++ b/demo/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>jQuery Boilerplate</title>
+		<title>jQuery toCanvas Plugin</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="../src/jquery.boilerplate.js"></script>
+		<script src="../src/jquery.toCanvas.js"></script>
 	</head>
 	<body>
-		<div id="element"></div>
+		<img src="ny_view.jpg" class="toCanvas"></div>
 		<script>
 			$(function() {
-				$("#element").defaultPluginName({
-					propertyName: "a custom value"
+				$(".toCanvas").toCanvas({
+					opacity: 0.7
 				});
 			});
 		</script>
