--- a/demo/index.html
+++ b/demo/index.html
@@ -4,13 +4,20 @@
 		<title>jQuery toCanvas Plugin</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="../src/jquery.toCanvas.js"></script>
+		<style>
+			canvas {
+				transition: all 1s;
+			}
+		</style>
 	</head>
 	<body>
+		<img src="ny_view.jpg"></div>
 		<img src="ny_view.jpg" class="toCanvas"></div>
 		<script>
 			$(function() {
 				$(".toCanvas").toCanvas({
-					opacity: 0.7
+					opacity: 1,
+					hoverOpacity: 0.3
 				});
 			});
 		</script>
