--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,7 @@
 	<body>
 		<img src="ny_view.jpg"></div>
 		<img src="ny_view.jpg" class="toCanvas"></div>
+		<img src="ny_view.jpg" class="toCanvas-lomo"></div>
 		<script>
 			$(function() {
 				var lomoLight = [
@@ -20,10 +21,24 @@
 					{ saturation: 20 },
 					{ gamma: 1.4 },
 					{ vignette: { opacity: 0.8 } },
-					{ brightness: 5 }
+					{ brightness: 5 },
 				];
 
 				$(".toCanvas").toCanvas({
+					opacity: 1,
+					hoverOpacity: 0,
+					process: [
+						{ gamma: 1.4 },
+						{ invert: true },
+						{ brightness: -10 },
+						{ vignette: { 
+							opacity: 1,
+							size: 0.2  
+						} },
+					],
+				});
+
+				$(".toCanvas-lomo").toCanvas({
 					opacity: 1,
 					hoverOpacity: 0,
 					process: lomoLight,
