looping video. Videos need to loop.

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 		<img src="ny_view.jpg" class="toCanvas" />
 		<img src="ny_view.jpg" class="toCanvas-lomo" />
 
-		<video class="toCanvas-video" width="640" height="360" controls="" autoplay="">
+		<video class="toCanvas-video" width="640" height="360" controls="" autoplay="" loop="">
 			<!-- MP4 must be first for iPad! -->
 			<source src="big_buck_bunny.mp4" type="video/mp4"><!-- Safari / iOS, IE9 -->
 			<source src="big_buck_bunny.webm" type="video/webm"><!-- Chrome10+, Ffx4+, Opera10.6+ -->
@@ -39,9 +39,9 @@
 						{ gamma: 1.4 },
 						{ invert: true },
 						{ brightness: -10 },
-						{ vignette: { 
+						{ vignette: {
 							opacity: 1,
-							size: 0.2  
+							size: 0.2
 						} }
 					]
 				});
@@ -58,9 +58,9 @@
 					hoverOpacity: 0,
 					process: [
 						{ invert: true },
-						{ vignette: { 
+						{ vignette: {
 							opacity: 1,
-							size: 0.2  
+							size: 0.2
 						} }
 					]
 				});
