--- a/demo/index.html
+++ b/demo/index.html
@@ -6,21 +6,23 @@
 		<script src="../src/jquery.toCanvas.js"></script>
 		<style>
 			canvas {
-				transition: all 0.2s;
+				transition: all 0.8s;
 			}
 		</style>
 	</head>
 	<body>
 		<img src="ny_view.jpg" />
+		<img src="ny_view.jpg" class="toCanvas-tmp" />
 		<img src="ny_view.jpg" class="toCanvas" />
 		<img src="ny_view.jpg" class="toCanvas-lomo" />
 
-		<video class="toCanvas-video" width="640" height="360" controls="" autoplay="">
-			<!-- MP4 must be first for iPad! -->
-			<source src="big_buck_bunny.mp4" type="video/mp4"><!-- Safari / iOS, IE9 -->
-			<source src="big_buck_bunny.webm" type="video/webm"><!-- Chrome10+, Ffx4+, Opera10.6+ -->
-			<source src="big_buck_bunny.ogv" type="video/ogg"><!-- Firefox3.6+ / Opera 10.5+ -->
+		<!--
+		<video class="toCanvas-video" width="640" height="360" controls autoplay loop>
+			<source src="big_buck_bunny.mp4" type="video/mp4">
+			<source src="big_buck_bunny.webm" type="video/webm">
+			<source src="big_buck_bunny.ogv" type="video/ogg">
 		</video>
+		-->
 
 		<script>
 			$(function() {
@@ -31,6 +33,15 @@
 					{ vignette: { opacity: 0.8 } },
 					{ brightness: 5 }
 				];
+
+				$(".toCanvas-tmp").toCanvas({
+					opacity: 1,
+					hoverOpacity: 0,
+					process: [
+						// { grayscale: true },
+						{ boxBlur: 6 },
+					]
+				});
 
 				$(".toCanvas").toCanvas({
 					opacity: 1,
@@ -47,15 +58,12 @@
 				});
 
 				$(".toCanvas-lomo").toCanvas({
-					opacity: 1,
-					hoverOpacity: 0,
+					overlay: false,
 					process: lomoLight
 				});
 
 				$('.toCanvas-video').toCanvas({
-					framerate: 30,
-					opacity: 1,
-					hoverOpacity: 0,
+					framerate: 10,
 					process: [
 						{ invert: true },
 						{ vignette: { 
