updates for convolution filters - options for each convolution function - call process from convolutionFilter instead from each caller - repeat edge pixels

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,7 +39,9 @@
 					hoverOpacity: 0,
 					process: [
 						// { grayscale: true },
-						{ boxBlur: 6 },
+						{ blur: {
+							//offset: 100
+						} },
 					]
 				});
 
