HSL update - colorize or additive - hue method - options via object

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,8 +39,9 @@
 					hoverOpacity: 0,
 					process: [
 						// { grayscale: true },
-						{ blur: {
-							//offset: 100
+						{ hue: {
+							value: 350,
+							colorize: false,
 						} },
 					]
 				});
